css/style.css
body {
  font-family: "Segoe UI", "Arial", sans-serif;
  font-size: 14px;
  color: #404040;
  line-height: 20px;
}
#autocomplete-city,
#result-city {
  margin: 20px;
  padding: 5px;
  width: 300px;
}
#autocomplete-city {
  margin-bottom: 0;
}
#result-city {
  margin-top: 2px;
  width: 400px;
  border: 1px solid #e3e3e3;
  box-shadow: 0 0 5px 2px #e1e1e1;
  min-height: 200px;
  max-height: 400px;
  display: none;
}
#result-city p {
  display: block;
  margin: 0;
  padding: 5px;
  cursor: pointer;
  color: #404040;
}
#result-city p:hover {
  background-color: #5199db;
  color: #ffffff;
}

